# pg-search-vector

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pooled  LICENSE  PERFORMANCE.md  PUBLISH.md  README.md  docker-compose.yml  railway.json
.github/workflows/: build-and-publish.yml
backup/: Dockerfile  README.md  backup.sh  entrypoint.sh  restore.sh
conf.d/: 10-tuning.conf
deploy/: docker-compose.yml  fly.toml  railway.json  render.yaml
deploy/kubernetes/: statefulset.yaml
django/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
django/pgsv/: __init__.py  apps.py  conf.py  ddl.py  expressions.py  lookups.py  search.py
django/pgsv/embedders/: __init__.py  base.py  custom.py  mercuriumai.py  ollama.py  openai.py  registry.py
django/pgsv/management/commands/: pgsv_bench.py  pgsv_check.py
django/tests/: test_smoke.py
init/: 00-pgsv.sh  10-tuning.sh  20-app-role.sh  30-walg-bootstrap.sh
pooled/: gen-pgbouncer-config.sh  pooled-entrypoint.sh
skills/: LICENSE  README.md  skills.yaml
skills/bm25-tokenizer-guide/: SKILL.md
skills/django-pgsearch-patterns/: SKILL.md
skills/fastapi-pgsearch-patterns/: SKILL.md
skills/hybrid-lexical-semantic/: SKILL.md
skills/pg-cron-scheduling/: SKILL.md
skills/pg-partman-partitioning/: SKILL.md
skills/pg-repack-runbook/: SKILL.md
skills/pg-search-bm25/: SKILL.md
skills/pgbouncer-pool-modes/: SKILL.md
skills/pgvectorscale-diskann/: SKILL.md
sql/: pgsv.sql
