[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-search-vector-django"
version = "0.4.0"
description = "Django integration for pg-search-vector: BM25 + pgvector hybrid search with pluggable query embedders."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Mercurium Analytics"},
]
keywords = ["django", "postgres", "pg_search", "pgvector", "bm25", "hybrid-search"]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]
dependencies = [
  "Django>=4.2",
  "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/Mercurium-Analytics/pg-search-vector"
Repository = "https://github.com/Mercurium-Analytics/pg-search-vector"
Issues = "https://github.com/Mercurium-Analytics/pg-search-vector/issues"

[project.optional-dependencies]
pgvector = ["pgvector>=0.2"]
openai = ["openai>=1.0"]
all = ["pgvector>=0.2", "openai>=1.0"]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pgsv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
